
  * Fixed a problem with mount.s3ql (incorrectly) reporting corrupted
    data for compressed blocks of some specific sizes. Many thanks to
    Balázs for extensive debugging of this problem.

  * Specifying --debug when using syslog or file logging no longer
    suppresses informational messages to stdout.

  * Fixed build under MacOS X. Thanks to john@nachtimwald.com for the
    patch!
  
2013-10-19, S3QL 2.5

  * Removed a race condition that resulted in a crash when a file was
    deleted while the upload was in progress, and the upload was then
    restarted because of a connection problem.

  * Specifying bzip2 as the compression algorithm for mount.s3ql
    no longer gives an error.

  * Fixed another race condition that could lead to the (apparent)
    vanishing of the file system metadata when the mount.s3ql is
    killed at an unfortunate time.

  * S3QL programs no longer create an empty file in the default log
    file location if a custom log file is specified with --log.

  * contrib/benchmark.py is now working again - thanks to
    davidthomson@gmail.com.

  * If a backend returns corrupted data, mount.s3ql no longer crashes
    but switches to read-only operation.

  * Fixed a problem with error messages from mount.s3ql being lost,
    resulting in a file system shutdown for apparently no reason.
  
2013-08-27, S3QL 2.4

  * Attempts to upgrade a file system that is already at the newest
    revision no longer render the local metadata copy unusable.

  * Google storage bucket names containing dots no longer cause
    problems with SSL certificate validation.

  * Fixed crash when statvfs() is called on an almost empty file
    system (which may happen automatically when using some desktop
    environments, resulting in an immediate crash after mounting an
    empty filesystem).

  * There is a new "swiftks" backend for OpenStack/Swift servers that
    supports keystone authentication and allows specification of the
    desired storage region.
