@@ -25,7 +25,10 @@ UNRELEASED, S3QL tip
 
   * Fixed build under MacOS X. Thanks to john@nachtimwald.com for the
     patch!
-  
+
+  * mount.s3ql now autodetects a sensible default for the
+    --max-cache-entries option.
+    
 2013-10-19, S3QL 2.5
 
   * Removed a race condition that resulted in a crash when a file was
